fix after rejection?

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -13,7 +13,8 @@
     "https://api.openai.com/"
   ],
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "background.js",
+    "type": "module"
   },
   "action": {
     "default_title": "GPT answers for WhatsApp™ web"
